base/svc.yaml
---
# Source: nginx/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gopoc-app2-nginx
  labels:
    app.kubernetes.io/name: nginx
    helm.sh/chart: nginx-8.9.0
    app.kubernetes.io/instance: gopoc-app2
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/port: '9113'
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9113
      targetPort: metrics
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: gopoc-app2
